# ComfyUI-LatentSyncWrapper

./: .gitignore  README.md  __init__.py  fixed_nodes.py  nodes.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: issue-template.yml
configs/scheduler/: config.json
configs/syncnet/: syncnet_16_latent.yaml  syncnet_16_pixel.yaml  syncnet_16_pixel_attn.yaml  syncnet_25_pixel.yaml
configs/unet/: stage1.yaml  stage1_512.yaml  stage2.yaml  stage2_512.yaml  stage2_efficient.yaml
eval/: draw_syncnet_lines.py  eval_fvd.py  eval_sync_conf.sh  eval_syncnet_acc.py  eval_syncnet_acc.sh  fvd.py  inference_videos.py
eval/syncnet/: syncnet_eval.py
example_workflows/: latentsync1.5_comfyui_basic.json
latentsync/data/: syncnet_dataset.py  unet_dataset.py
latentsync/models/: attention.py  motion_module.py  resnet.py  stable_syncnet.py  syncnet.py  unet.py  unet_blocks.py  (+1 more)
preprocess/: affine_transform.py  data_processing_pipeline.py  detect_shot.py  filter_high_resolution.py  filter_visual_quality.py  remove_broken_videos.py  remove_incorrect_affined.py  resample_fps_hz.py  segment_videos.py  sync_av.py
scripts/: inference.py  train_syncnet.py  train_unet.py
tools/: count_total_videos_time.py  download_web_videos.py  move_files_recur.py  occupy_gpu.py  remove_outdated_files.py  write_fileslist.py
utils/: diffusers_convert.py
workflow/: LatentSyncWrapper with kokorotts.json  latentsync with enhance video nodes.json  latentsync1.5_comfyui + mixer.json  latentsync1.5_comfyui_basic.json  latentsync_comfyui_basic.json
(+10 files in other folders)
